[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "github-repo-client"
version = "0.1.0"
description = "GitHub API client for MCP-based repository access without local cloning"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["github_repo_client*"]
